--- a/src/page/NotePage.module.css
+++ b/src/page/NotePage.module.css
@@ -140,6 +140,7 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
+    /* background-color: coral; */
 }
 
 .labels {
@@ -148,6 +149,7 @@
     list-style: none;
     margin-right: 50px;
     align-items: flex-start;
+    /* background-color: darkcyan; */
 }
 
 .boardScroller,
@@ -209,7 +211,7 @@
     top: 20px;
     /* background-color: aquamarine; */
     margin: 0;
-    width: 100%;
+    width: 100vw;
     height: fit-content;
 }
 
@@ -447,6 +449,10 @@
         margin-bottom: 50px;
     }
 
+    .boardScroller{
+        width: 100%;
+    }
+
     .pgCtrl {
         position: relative;
         top: -80px;
@@ -483,6 +489,7 @@
     .mainForm {
         flex-direction: column;
         left: 0;
+        width: 100vw;
     }
 
     .subForm {
